fix: добавить z-index для .header

--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -7,6 +7,7 @@
   padding-top: 14px;
   padding-bottom: 14px;
   background-color: var(--color-white);
+  z-index: 1;
 }
 
 .header__logo-btn:disabled {
